--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,19 @@
 server:
   port:8080
+
+#database 연동 설명
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/sku?serverTimeZone=Asia/Seoul&characterEncoding=UTF-8
+    username: root
+    password: 1q2w3e4r
+   thymeleaf:
+    cache: false
+
+jpa:
+  database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+  open-in-view: false
+  show-sql: true
+  hibernate:
+    ddl-auto: create
