--- a/build.gradle
+++ b/build.gradle
@@ -23,19 +23,17 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	implementation 'org.springframework.boot:spring-boot-starter-web'''
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	runtimeOnly 'mysql:mysql-connector-java'
+	runtimeOnly 'com.mysql:mysql-connector-j'
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
-	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
-	compile('nz.net.ultrag.thymeleaf:thymeleaf-layout-dialect')
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
