--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.thymeleaf.cache=false
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=DEBUG
